--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build" :"npx tailwindcss-cli build -i src/css/tailwind.css -o public/css/tailwind.css -w"
+    "tailwind": "npx tailwindcss-cli build -i src/css/tailwind.css -o public/css/tailwind.css -w",
+    "dev": "next",
+    "build": "next build",
+    "start": "next start",
+    "export": "next export"
   },
   "keywords": [],
   "author": "",
