--- a/package.json
+++ b/package.json
@@ -5,11 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "tailwind": "npx tailwindcss-cli build -i src/css/tailwind.css -o public/css/tailwind.css -w",
-    "dev": "next",
-    "build": "next build",
-    "start": "next start",
-    "export": "next export"
+    "build" :"npx tailwindcss-cli build -i src/css/tailwind.css -o public/css/tailwind.css -w"
   },
   "keywords": [],
   "author": "",
